home sections and base styles

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,34 @@
     <meta name="description" content="" />
 </head>
 <body>
-    <header class="banner swrap">
-        Főmenüpontok: Studio(Home) | Árak | FAQ | Kapcsolat
-        Esetleg másodlagos menü: Sminketoválás: Szemöldök | Szemhéj | Száj
-        Állandó gyors elemek: Időpontfoglalás telefonszámmal
+    <header class="siteheader swrap swrap--full swrap--narrow">
+        <a href="#" class="siteheader__logo"><img src="http://placehold.it/400x160/?text=elysian" alt=""></a>
+        <nav class="siteheader__nav">
+          <ul class="menu menu--main">
+            <li class="is-active"><a href="#">Studió</a></li>
+            <li><a href="#">Árak</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Kapcsolat</a></li>
+          </ul>
+        </nav>
+        <div class="siteheader__section">
+          <a href="tel:+36702996999" class="btn"><small>Időpontfoglalás</small>+36 70 299 6999</a>
+          <!-- Esetleg másodlagos menü: Sminketoválás: Szemöldök | Szemhéj | Száj -->
+        </div>
     </header>
 
     <section class="hero swrap">
-        <h2>Elysian - Permanent Make-up</h2>
-        <h3>Jónás Diána sminktetováló művész stúdiója</h3>
-        <p>Személyiségedet tükröző és vonásaiddal harmonizáló egyedi sminktetoválásokat készítünk.</p>
+        <div class="hero__content">
+            <h1>Jónás Diána sminktetováló művész stúdiója</h1>
+            <p>Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválásokat készítünk.</p>
+            <a href="#" class="fauxbtn">tudj meg többet</a>
+        </div>  
+        <figure class="hero__fig">
+          <img src="http://placehold.it/1600x1200/?text=dia" alt="">
+        </figure>
     </section>
 
-<section id="bio" class="swrap">
+<section id="bio" class="swrap swrap--light">
     <p>Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban ezzel fog foglalkozni.</p>
     <p>A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint 4 év gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.</p>
     <p>Tökéletesség, boldogság és harmónia. Ezek az Elysian alapelvei. Vendégek arcvonásaival maximálisan harmonizáló sminktetoválással a tökéletességre törekszik, a személyiségek és egyedi vonások megtartásával, hogy a vendég boldogan távozhasson.</p>
@@ -29,7 +44,7 @@
 <section id="services" class="swrap">
     <h2>Sminketetoválás - Természetes szépség minden ébredéskor</h2>
     <p><strong>Imagine, you wake up in the morning and are perfectly made-up. In a way that accentuates your natural beauty to the fullest. Permanent make-up fulfills this dream. It is not only the ideal solution for those who are in a hurry in the morning, but also for eyeglass wearers or people who want to permanently hide a small flaw.</strong></p>
-
+    <hr>
 
     <h3>Szemöldök - Csodálatos formáért</h3>
     <p>The eyebrows make the whole face. Even the smallest corrections make it seem livelier and clearer. With permanent make-up, your eyebrows are always in the right shape. Irregular or missing hair growth can be compensated by fine pigmentation. Additional shades increase the expressiveness. The result is a perfectly shaped yet completely natural eyebrow.</p>
@@ -44,7 +59,7 @@
     <a href="#" class="fauxbtn">Részletek...</a>
 </section>
 
-<section id="testimoinals" class="swrap">
+<section id="testimoinals" class="swrap swrap--light">
     <blockquote>
         <p>Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha valaki elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte lány és nagyon hangulatos kis helye van, ahol igazán le lehet ereszteni, amíg ott vagy. Imádom</p>
         <cite>Kling Szandra</cite>
@@ -66,7 +81,7 @@
     <a href="#" class="btn">Mutasd az akciót</a>
 </section>
 
-<section id="gallery" class="swrap">
+<section id="gallery" class="swrap swrap--light">
     <h2>Exkluziv studio Buda szívében (opcionális)</h2>
     <p>Fotógaléria  az üzletről</p>
 </section>
