ghpages and cname stuff

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <a href="#" class="siteheader__logo"><img src="http://placehold.it/400x160/?text=elysian" alt=""></a>
         <nav class="siteheader__nav">
           <ul class="menu menu--main">
-            <li class="is-active"><a href="#">Studió</a></li>
+            <li class="is-active"><a href="CNAME">Studió</a></li>
             <li><a href="#">Árak</a></li>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Kapcsolat</a></li>
