--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,23 @@
 
     <section class="hero swrap">
         <div class="hero__content">
-            <h1>Jónás Diána sminktetováló művész stúdiója</h1>
-            <p>Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválásokat készítünk.</p>
+            <h1>Ébredj tökéletes sminkben minden reggel</h1>
+            <p>Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás Budán.</p>
             <a href="#" class="fauxbtn">tudj meg többet</a>
         </div>  
         <figure class="hero__fig">
-          <img src="http://placehold.it/1600x1200/?text=dia" alt="">
+          <img src="http://placehold.it/1600x1200/?text=vaó" alt="">
         </figure>
     </section>
 
 <section id="bio" class="swrap swrap--light">
+    <img src="http://placehold.it/150x200/?text=dia" alt="">
+    <h2>Jónás Diána <small>siminktetováló művész</small></h2>
     <p>Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban ezzel fog foglalkozni.</p>
     <p>A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint 4 év gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.</p>
     <p>Tökéletesség, boldogság és harmónia. Ezek az Elysian alapelvei. Vendégek arcvonásaival maximálisan harmonizáló sminktetoválással a tökéletességre törekszik, a személyiségek és egyedi vonások megtartásával, hogy a vendég boldogan távozhasson.</p>
     <p>Exclusive környezetben Buda szívében várja Vendégeit!<p>
-    <p>Fotók a szalonról! (Lightbox link vagy anchor link egy lenti sávra)</p>
+    <a href="#" class="fauxbtn">nézd körül a stúdióban</a>
 </section>
 
 <section id="services" class="swrap">
@@ -49,10 +51,12 @@
     <h3>Szemöldök - Csodálatos formáért</h3>
     <p>The eyebrows make the whole face. Even the smallest corrections make it seem livelier and clearer. With permanent make-up, your eyebrows are always in the right shape. Irregular or missing hair growth can be compensated by fine pigmentation. Additional shades increase the expressiveness. The result is a perfectly shaped yet completely natural eyebrow.</p>
     <a href="#" class="fauxbtn">Részletek...</a>
+    <br><br>
 
     <h3>Szemhéj - Elbűvölő tekintetért</h3>
     <p>The eyelid line emphasizes the expressiveness of the eyes. Either with a fine line that can discreetly hide a lash loss and give the eyes that certain something. Or with a decorative line that underlines the shape of the eyes effectively. No more annoying blurring and daily makeup and make-up. The permanent eyeliner is the most beautiful solution, not just for an eye-sight.</p>
     <a href="#" class="fauxbtn">Részletek...</a>
+    <br><br>
 
     <h3>Száj - Álom ajkakért</h3>
     <p>Colorful, beautifully contoured lips, every day, all day long. And all without lipstick and make-up mirror. Even the preliminary drawing, which compensates for small irregularities and emphasizes beautiful curves, will convince you. Pigmenting is done with a lip color tailored to your wishes. From the natural lip tone to the exciting trend color. No make-up and smearing more. Whether after a meal, sports or a passionate encounter - in every situation your mouth looks fresh and beautiful. The only pity that you can not see it permanently yourself!</p>
@@ -64,10 +68,12 @@
         <p>Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha valaki elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte lány és nagyon hangulatos kis helye van, ahol igazán le lehet ereszteni, amíg ott vagy. Imádom</p>
         <cite>Kling Szandra</cite>
     </blockquote>
+    <hr>
     <blockquote>
         <p>Dia egy nagyon figyelmes, igényes és körültekintő sminktetováló. Rendkívül figyel a vendége igényeire. Én is és édesanyám is nagy örömmel viseljük az esztétikus és ízléses munkája eredményét. Ez úton is szeretném megköszönni neki és mindenkinek nyugodt szívvel ajánlani.</p>
         <cite>Nagy Bianka</cite>
     </blockquote>
+    <hr>
     <blockquote>
         <p>Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat. Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom, hogy a sminkem tökéletes Imádom a szám, a szemöldököm, és a szememet is. Köszönöm. Most voltam Nálad harmadszorra, és megdöbbente, hogy se a szám, se a szemöldökém, se a szememnél nem éreztem fájdalmat, szuper vagy.</p>
         <cite>Patik Marta</cite>
@@ -76,16 +82,26 @@
 
 
 <section id="testimoinals" class="swrap">
-    <h4>Ingyenes konzultáció és berajzolás (opcionális promóció)</h4>
-    <p>Ez egy külön oldalra visz. Bizonytalan, vagy sok kérdéssel rendelkező ügyfeleknek promózza a konzultációt, ami a beavatkozás árából levonható.<p>
-    <a href="#" class="btn">Mutasd az akciót</a>
+    <h2>Nem volt még sminktetoválásod?</h2>
+    <p>Kérj személyes konzultációt és <strong>ingyenes berajzolást.</strong></p>
+    <a href="#" class="btn">Kapcsolatfelvétel</a> <a href="#" class="btn">Tudnivalók újaknak</a>
 </section>
-
-<section id="gallery" class="swrap swrap--light">
-    <h2>Exkluziv studio Buda szívében (opcionális)</h2>
-    <p>Fotógaléria  az üzletről</p>
-</section>
-
-
+<footer class="sitefooter swrap swrap--full swrap--narrow swrap--light">
+    <div class="sitefooter__section">
+      <h3>Elysian Beauty Kft.</h3>
+      <ul>
+        <li>Cégj. sz.: 9688412-23-561</li>
+        <li>H-1013 Budapest<br>Pauler utca 15.</li>
+        <li><a href="tel:+36702996999">+36 70 299 6999</a></li>
+        <li><a href="mailto:studio@elysianbeauty.hu">studio@elysianbeauty.hu</a></li>
+      </ul>
+    </div>
+    <div class="sitefooter__section">
+        <ul class="menu menu--vert">
+          <li><a href="#">Adatkezelési irányelvek</a></li>
+          <li><a href="#">Jogi nyilatkozat</a></li>
+        </ul>
+      </div>
+</footer>
 </body>
 </html>
