--- a/src/404.html
+++ b/src/404.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Static Site Boilerplate</title>
-    <meta name="description" content="" />
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Static Site Boilerplate</title>
+        <meta name="description" content="" />
+    </head>
+    <body></body>
 </html>
