--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <body>
         <header class="siteheader swrap swrap--full swrap--narrow">
             <a href="#" class="siteheader__logo">
-                <img src="http://placehold.it/400x160/?text=elysian" alt="" />
+                <img src="images/logo.svg" alt="Elysian" />
             </a>
             <nav class="siteheader__nav">
                 <ul class="menu menu--main">
@@ -40,8 +40,10 @@
             </figure>
         </section>
 
-        <section id="services" class="swrap swrap--light">
-            <h2>Sminketetoválás - Természetes szépség minden ébredéskor</h2>
+        <section id="services" class="swrap aswrap--light">
+            <h2>
+                Sminketetoválás <em>Természetes szépség minden ébredéskor</em>
+            </h2>
             <p>
                 <strong
                     >Imagine, you wake up in the morning and are perfectly
@@ -52,47 +54,67 @@
                     want to permanently hide a small flaw.</strong
                 >
             </p>
-            <hr />
+        </section>
+        <section id="slister" class="swrap slister">
+            <div class="servicelist">
+                <div class="servicecard">
+                    <h3 class="servicecard__title">
+                        Szemöldök <em>Csodálatos formáért</em>
+                    </h3>
+                    <p>
+                        The eyebrows make the whole face. Even the smallest
+                        corrections make it seem livelier and clearer. With
+                        permanent make-up, your eyebrows are always in the right
+                        shape. Irregular or missing hair growth can be
+                        compensated by fine pigmentation. Additional shades
+                        increase the expressiveness. The result is a perfectly
+                        shaped yet completely natural eyebrow.
+                    </p>
+                    <a href="#" class="servicecard__action fauxbtn"
+                        >Részletek...</a
+                    >
+                </div>
 
-            <h3>Szemöldök - Csodálatos formáért</h3>
-            <p>
-                The eyebrows make the whole face. Even the smallest corrections
-                make it seem livelier and clearer. With permanent make-up, your
-                eyebrows are always in the right shape. Irregular or missing
-                hair growth can be compensated by fine pigmentation. Additional
-                shades increase the expressiveness. The result is a perfectly
-                shaped yet completely natural eyebrow.
-            </p>
-            <a href="#" class="fauxbtn">Részletek...</a>
-            <br /><br />
+                <div class="servicecard">
+                    <h3 class="servicecard__title">
+                        Szemhéj <em>Elbűvölő tekintetért</em>
+                    </h3>
+                    <p>
+                        The eyelid line emphasizes the expressiveness of the
+                        eyes. Either with a fine line that can discreetly hide a
+                        lash loss and give the eyes that certain something. Or
+                        with a decorative line that underlines the shape of the
+                        eyes effectively. No more annoying blurring and daily
+                        makeup and make-up. The permanent eyeliner is the most
+                        beautiful solution, not just for an eye-sight.
+                    </p>
+                    <a href="#" class="servicecard__action fauxbtn"
+                        >Részletek...</a
+                    >
+                </div>
 
-            <h3>Szemhéj - Elbűvölő tekintetért</h3>
-            <p>
-                The eyelid line emphasizes the expressiveness of the eyes.
-                Either with a fine line that can discreetly hide a lash loss and
-                give the eyes that certain something. Or with a decorative line
-                that underlines the shape of the eyes effectively. No more
-                annoying blurring and daily makeup and make-up. The permanent
-                eyeliner is the most beautiful solution, not just for an
-                eye-sight.
-            </p>
-            <a href="#" class="fauxbtn">Részletek...</a>
-            <br /><br />
-
-            <h3>Száj - Álom ajkakért</h3>
-            <p>
-                Colorful, beautifully contoured lips, every day, all day long.
-                And all without lipstick and make-up mirror. Even the
-                preliminary drawing, which compensates for small irregularities
-                and emphasizes beautiful curves, will convince you. Pigmenting
-                is done with a lip color tailored to your wishes. From the
-                natural lip tone to the exciting trend color. No make-up and
-                smearing more. Whether after a meal, sports or a passionate
-                encounter - in every situation your mouth looks fresh and
-                beautiful. The only pity that you can not see it permanently
-                yourself!
-            </p>
-            <a href="#" class="fauxbtn">Részletek...</a>
+                <div class="servicecard">
+                    <h3 class="servicecard__title">
+                        Száj <em>Álom ajkakért</em>
+                    </h3>
+                    <p>
+                        Colorful, beautifully contoured lips, every day, all day
+                        long. And all without lipstick and make-up mirror. Even
+                        the preliminary drawing, which compensates for small
+                        irregularities and emphasizes beautiful curves, will
+                        convince you. Pigmenting is done with a lip color
+                        tailored to your wishes. From the natural lip tone to
+                        the exciting trend color. No make-up and smearing more.
+                        Whether after a meal, sports or a passionate encounter -
+                        in every situation your mouth looks fresh and beautiful.
+                        The only pity that you can not see it permanently
+                        yourself!
+                    </p>
+                    <a href="#" class="servicecard__action fauxbtn"
+                        >Részletek...</a
+                    >
+                </div>
+            </div>
         </section>
 
         <section id="bio" class="swrap">
