--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
     </head>
     <body>
-        <header class="siteheader swrap swrap--full swrap--narrow">
+        <header class="siteheader swrap swrap--dark swrap--full swrap--narrow">
             <a href="#" class="siteheader__logo">
                 <img src="images/logo.svg" alt="Elysian" />
             </a>
@@ -26,7 +26,7 @@
             </div>
         </header>
 
-        <section class="hero swrap">
+        <section class="hero swrap swrap--dark">
             <div class="hero__content">
                 <h1>Ébredj tökéletes sminkben minden reggel</h1>
                 <p>
@@ -40,22 +40,20 @@
             </figure>
         </section>
 
-        <section id="services" class="swrap aswrap--light">
-            <h2>
-                Sminketetoválás <em>Természetes szépség minden ébredéskor</em>
+        <section id="service" class="service swrap swrap--light atext-center">
+            <h2 class="nicetitle">
+                Sminktetoválás <em>Természetes szépség minden ébredéskor</em>
             </h2>
             <p>
-                <strong
-                    >Imagine, you wake up in the morning and are perfectly
-                    made-up. In a way that accentuates your natural beauty to
-                    the fullest. Permanent make-up fulfills this dream. It is
-                    not only the ideal solution for those who are in a hurry in
-                    the morning, but also for eyeglass wearers or people who
-                    want to permanently hide a small flaw.</strong
-                >
+                Imagine, you wake up in the morning and are perfectly made-up.
+                In a way that accentuates your natural beauty to the fullest.
+                Permanent make-up fulfills this dream. It is not only the ideal
+                solution for those who are in a hurry in the morning, but also
+                for eyeglass wearers or people who want to permanently hide a
+                small flaw.
             </p>
         </section>
-        <section id="slister" class="swrap slister">
+        <section id="slister" class="swrap aswrap--full slister">
             <div class="servicelist">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
@@ -117,68 +115,89 @@
             </div>
         </section>
 
-        <section id="bio" class="swrap">
-            <img src="http://placehold.it/150x200/?text=dia" alt="" />
-            <h2>Jónás Diána <small>siminktetováló művész</small></h2>
-            <p>
-                Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol
-                kozmetiskusként életreszóló tapasztalatokat szerzett. Hazatérve
-                magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy
-                a továbbiakban ezzel fog foglalkozni.
-            </p>
-            <p>
-                A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós
-                Alexandra Academyinél tanulta. Ez utóbiban később sminktetováló
-                oktatóként is dolgozott. Több mint 4 év gyakorlat után jött el
-                az idő, hogy Dia saját szalont nyittott.
-            </p>
-            <p>
-                Tökéletesség, boldogság és harmónia. Ezek az Elysian alapelvei.
-                Vendégek arcvonásaival maximálisan harmonizáló sminktetoválással
-                a tökéletességre törekszik, a személyiségek és egyedi vonások
-                megtartásával, hogy a vendég boldogan távozhasson.
-            </p>
-            <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
-            <p>
-                <a href="#" class="fauxbtn">nézd körül a stúdióban</a>
-            </p>
+        <section id="bio" class="bio swrap">
+            <figure class="bio__foto">
+                <img src="http://placehold.it/500x500/?text=dia" alt="" />
+                <figcaption>
+                    Jónás Diána
+                    <em>Sminktetováló művész</em>
+                </figcaption>
+            </figure>
+            <div class="bio__content">
+                <h2 class="nicetitle">
+                    Bemutatkozás
+                </h2>
+                <p>
+                    Dia, pályályafutását szerencsés módon Hamburgban kezdte,
+                    ahol kozmetiskusként életreszóló tapasztalatokat szerzett.
+                    Hazatérve magával ragadata a sminktetoválás világa. Nem volt
+                    kérdés, hogy a továbbiakban ezzel fog foglalkozni.
+                </p>
+                <p>
+                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós
+                    Alexandra Academyinél tanulta. Ez utóbiban később
+                    sminktetováló oktatóként is dolgozott. Több mint 4 év
+                    gyakorlat után jött el az idő, hogy Dia saját szalont
+                    nyittott.
+                </p>
+                <p>
+                    Tökéletesség, boldogság és harmónia. Ezek az Elysian
+                    alapelvei. Vendégek arcvonásaival maximálisan harmonizáló
+                    sminktetoválással a tökéletességre törekszik, a
+                    személyiségek és egyedi vonások megtartásával, hogy a vendég
+                    boldogan távozhasson.
+                </p>
+                <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
+                <p>
+                    <a href="#" class="fauxbtn">nézd körül a stúdióban</a>
+                </p>
+            </div>
         </section>
 
         <section id="testimoinals" class="swrap swrap--light">
-            <blockquote>
-                <p>
-                    Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha
-                    valaki elrontja az arcodat, nincs fájdalom!!!! Kedves,
-                    őszinte lány és nagyon hangulatos kis helye van, ahol igazán
-                    le lehet ereszteni, amíg ott vagy. Imádom
-                </p>
-                <cite>Kling Szandra</cite>
-            </blockquote>
-            <hr />
-            <blockquote>
-                <p>
-                    Dia egy nagyon figyelmes, igényes és körültekintő
-                    sminktetováló. Rendkívül figyel a vendége igényeire. Én is
-                    és édesanyám is nagy örömmel viseljük az esztétikus és
-                    ízléses munkája eredményét. Ez úton is szeretném megköszönni
-                    neki és mindenkinek nyugodt szívvel ajánlani.
-                </p>
-                <cite>Nagy Bianka</cite>
-            </blockquote>
-            <hr />
-            <blockquote>
-                <p>
-                    Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az
-                    arcomat. Reggelente amikor felkelek, és belenézek a tükröbe,
-                    konstatálom, hogy a sminkem tökéletes Imádom a szám, a
-                    szemöldököm, és a szememet is. Köszönöm. Most voltam Nálad
-                    harmadszorra, és megdöbbente, hogy se a szám, se a
-                    szemöldökém, se a szememnél nem éreztem fájdalmat, szuper
-                    vagy. .a,d a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh
-                    klashdfk haksdh kashdf kahsdfk adkfh akhs
-                </p>
-                <cite>Patik Marta</cite>
-            </blockquote>
+            <ul class="testilist">
+                <li>
+                    <blockquote class="testicard">
+                        <p>
+                            Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza
+                            azt is ha valaki elrontja az arcodat, nincs
+                            fájdalom!!!! Kedves, őszinte lány és nagyon
+                            hangulatos kis helye van, ahol igazán le lehet
+                            ereszteni, amíg ott vagy. Imádom
+                        </p>
+                        <cite>Kling Szandra</cite>
+                    </blockquote>
+                </li>
+                <li>
+                    <blockquote class="testicard">
+                        <p>
+                            Dia egy nagyon figyelmes, igényes és körültekintő
+                            sminktetováló. Rendkívül figyel a vendége igényeire.
+                            Én is és édesanyám is nagy örömmel viseljük az
+                            esztétikus és ízléses munkája eredményét. Ez úton is
+                            szeretném megköszönni neki és mindenkinek nyugodt
+                            szívvel ajánlani.
+                        </p>
+                        <cite>Nagy Bianka</cite>
+                    </blockquote>
+                </li>
+                <li>
+                    <blockquote class="testicard">
+                        <p>
+                            Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad
+                            az arcomat. Reggelente amikor felkelek, és belenézek
+                            a tükröbe, konstatálom, hogy a sminkem tökéletes
+                            Imádom a szám, a szemöldököm, és a szememet is.
+                            Köszönöm. Most voltam Nálad harmadszorra, és
+                            megdöbbente, hogy se a szám, se a szemöldökém, se a
+                            szememnél nem éreztem fájdalmat, szuper vagy. .a,d
+                            a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh klashdfk
+                            haksdh kashdf kahsdfk adkfh akhs
+                        </p>
+                        <cite>Patik Marta</cite>
+                    </blockquote>
+                </li>
+            </ul>
         </section>
         <section class="swrap">
             <h2>Nem volt még sminktetoválásod?</h2>
