--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,7 @@
             <div class="hero__content">
                 <h1>Ébredj tökéletes sminkben minden reggel</h1>
                 <p>
-                    Személyiségedet tükröző, vonásaiddal harmonizáló egyedi
-                    sminktetoválás Budán.
+                    Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás Budán.
                 </p>
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
@@ -41,76 +40,53 @@
         </section>
 
         <section id="service" class="service swrap swrap--light atext-center">
-            <h2 class="nicetitle">
-                Sminktetoválás <em>Természetes szépség minden ébredéskor</em>
-            </h2>
+            <h2 class="nicetitle">Sminktetoválás <em>Természetes szépség minden ébredéskor</em></h2>
             <p>
-                Imagine, you wake up in the morning and are perfectly made-up.
-                In a way that accentuates your natural beauty to the fullest.
-                Permanent make-up fulfills this dream. It is not only the ideal
-                solution for those who are in a hurry in the morning, but also
-                for eyeglass wearers or people who want to permanently hide a
-                small flaw.
+                Imagine, you wake up in the morning and are perfectly made-up. In a way that
+                accentuates your natural beauty to the fullest. Permanent make-up fulfills this
+                dream. It is not only the ideal solution for those who are in a hurry in the morning,
+                but also for eyeglass wearers or people who want to permanently hide a small flaw.
             </p>
         </section>
         <section id="slister" class="swrap aswrap--full slister">
             <div class="servicelist">
                 <div class="servicecard">
-                    <h3 class="servicecard__title">
-                        Szemöldök <em>Csodálatos formáért</em>
-                    </h3>
+                    <h3 class="servicecard__title">Szemöldök <em>Csodálatos formáért</em></h3>
                     <p>
-                        The eyebrows make the whole face. Even the smallest
-                        corrections make it seem livelier and clearer. With
-                        permanent make-up, your eyebrows are always in the right
-                        shape. Irregular or missing hair growth can be
-                        compensated by fine pigmentation. Additional shades
-                        increase the expressiveness. The result is a perfectly
-                        shaped yet completely natural eyebrow.
+                        The eyebrows make the whole face. Even the smallest corrections make it seem
+                        livelier and clearer. With permanent make-up, your eyebrows are always in the
+                        right shape. Irregular or missing hair growth can be compensated by fine
+                        pigmentation. Additional shades increase the expressiveness. The result is a
+                        perfectly shaped yet completely natural eyebrow.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn"
-                        >Részletek...</a
-                    >
+                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
                 </div>
 
                 <div class="servicecard">
-                    <h3 class="servicecard__title">
-                        Szemhéj <em>Elbűvölő tekintetért</em>
-                    </h3>
+                    <h3 class="servicecard__title">Szemhéj <em>Elbűvölő tekintetért</em></h3>
                     <p>
-                        The eyelid line emphasizes the expressiveness of the
-                        eyes. Either with a fine line that can discreetly hide a
-                        lash loss and give the eyes that certain something. Or
-                        with a decorative line that underlines the shape of the
-                        eyes effectively. No more annoying blurring and daily
-                        makeup and make-up. The permanent eyeliner is the most
-                        beautiful solution, not just for an eye-sight.
+                        The eyelid line emphasizes the expressiveness of the eyes. Either with a fine
+                        line that can discreetly hide a lash loss and give the eyes that certain
+                        something. Or with a decorative line that underlines the shape of the eyes
+                        effectively. No more annoying blurring and daily makeup and make-up. The
+                        permanent eyeliner is the most beautiful solution, not just for an eye-sight.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn"
-                        >Részletek...</a
-                    >
+                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
                 </div>
 
                 <div class="servicecard">
-                    <h3 class="servicecard__title">
-                        Száj <em>Álom ajkakért</em>
-                    </h3>
+                    <h3 class="servicecard__title">Száj <em>Álom ajkakért</em></h3>
                     <p>
-                        Colorful, beautifully contoured lips, every day, all day
-                        long. And all without lipstick and make-up mirror. Even
-                        the preliminary drawing, which compensates for small
-                        irregularities and emphasizes beautiful curves, will
-                        convince you. Pigmenting is done with a lip color
-                        tailored to your wishes. From the natural lip tone to
-                        the exciting trend color. No make-up and smearing more.
-                        Whether after a meal, sports or a passionate encounter -
-                        in every situation your mouth looks fresh and beautiful.
-                        The only pity that you can not see it permanently
-                        yourself!
+                        Colorful, beautifully contoured lips, every day, all day long. And all
+                        without lipstick and make-up mirror. Even the preliminary drawing, which
+                        compensates for small irregularities and emphasizes beautiful curves, will
+                        convince you. Pigmenting is done with a lip color tailored to your wishes.
+                        From the natural lip tone to the exciting trend color. No make-up and
+                        smearing more. Whether after a meal, sports or a passionate encounter - in
+                        every situation your mouth looks fresh and beautiful. The only pity that you
+                        can not see it permanently yourself!
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn"
-                        >Részletek...</a
-                    >
+                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
                 </div>
             </div>
         </section>
@@ -128,23 +104,19 @@
                     Bemutatkozás
                 </h2>
                 <p>
-                    Dia, pályályafutását szerencsés módon Hamburgban kezdte,
-                    ahol kozmetiskusként életreszóló tapasztalatokat szerzett.
-                    Hazatérve magával ragadata a sminktetoválás világa. Nem volt
-                    kérdés, hogy a továbbiakban ezzel fog foglalkozni.
+                    Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként
+                    életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a sminktetoválás
+                    világa. Nem volt kérdés, hogy a továbbiakban ezzel fog foglalkozni.
                 </p>
                 <p>
-                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós
-                    Alexandra Academyinél tanulta. Ez utóbiban később
-                    sminktetováló oktatóként is dolgozott. Több mint 4 év
-                    gyakorlat után jött el az idő, hogy Dia saját szalont
-                    nyittott.
+                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
+                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint 4 év
+                    gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.
                 </p>
                 <p>
-                    Tökéletesség, boldogság és harmónia. Ezek az Elysian
-                    alapelvei. Vendégek arcvonásaival maximálisan harmonizáló
-                    sminktetoválással a tökéletességre törekszik, a
-                    személyiségek és egyedi vonások megtartásával, hogy a vendég
+                    Tökéletesség, boldogság és harmónia. Ezek az Elysian alapelvei. Vendégek
+                    arcvonásaival maximálisan harmonizáló sminktetoválással a tökéletességre
+                    törekszik, a személyiségek és egyedi vonások megtartásával, hogy a vendég
                     boldogan távozhasson.
                 </p>
                 <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
@@ -159,11 +131,10 @@
                 <li>
                     <blockquote class="testicard">
                         <p>
-                            Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza
-                            azt is ha valaki elrontja az arcodat, nincs
-                            fájdalom!!!! Kedves, őszinte lány és nagyon
-                            hangulatos kis helye van, ahol igazán le lehet
-                            ereszteni, amíg ott vagy. Imádom
+                            Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha valaki
+                            elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte lány és nagyon
+                            hangulatos kis helye van, ahol igazán le lehet ereszteni, amíg ott vagy.
+                            Imádom
                         </p>
                         <cite>Kling Szandra</cite>
                     </blockquote>
@@ -171,12 +142,10 @@
                 <li>
                     <blockquote class="testicard">
                         <p>
-                            Dia egy nagyon figyelmes, igényes és körültekintő
-                            sminktetováló. Rendkívül figyel a vendége igényeire.
-                            Én is és édesanyám is nagy örömmel viseljük az
-                            esztétikus és ízléses munkája eredményét. Ez úton is
-                            szeretném megköszönni neki és mindenkinek nyugodt
-                            szívvel ajánlani.
+                            Dia egy nagyon figyelmes, igényes és körültekintő sminktetováló.
+                            Rendkívül figyel a vendége igényeire. Én is és édesanyám is nagy örömmel
+                            viseljük az esztétikus és ízléses munkája eredményét. Ez úton is
+                            szeretném megköszönni neki és mindenkinek nyugodt szívvel ajánlani.
                         </p>
                         <cite>Nagy Bianka</cite>
                     </blockquote>
@@ -184,15 +153,13 @@
                 <li>
                     <blockquote class="testicard">
                         <p>
-                            Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad
-                            az arcomat. Reggelente amikor felkelek, és belenézek
-                            a tükröbe, konstatálom, hogy a sminkem tökéletes
-                            Imádom a szám, a szemöldököm, és a szememet is.
-                            Köszönöm. Most voltam Nálad harmadszorra, és
-                            megdöbbente, hogy se a szám, se a szemöldökém, se a
-                            szememnél nem éreztem fájdalmat, szuper vagy. .a,d
-                            a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh klashdfk
-                            haksdh kashdf kahsdfk adkfh akhs
+                            Hálásan köszönöm Neked, hogy gyönyörűvé varázsoltad az arcomat.
+                            Reggelente amikor felkelek, és belenézek a tükröbe, konstatálom, hogy a
+                            sminkem tökéletes Imádom a szám, a szemöldököm, és a szememet is.
+                            Köszönöm. Most voltam Nálad harmadszorra, és megdöbbente, hogy se a szám,
+                            se a szemöldökém, se a szememnél nem éreztem fájdalmat, szuper vagy. .a,d
+                            a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh klashdfk haksdh kashdf kahsdfk
+                            adkfh akhs
                         </p>
                         <cite>Patik Marta</cite>
                     </blockquote>
