--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,32 @@
         <meta name="description" content="" />
     </head>
     <body>
+        <nav class="subnav">
+            <!-- <h3>Sminktetoválás</h3> -->
+            <ul class="menu menu--submenu">
+                <li><a href="#">Sminketeoválás</a></li>
+                <li><a href="#">Szemöldök</a></li>
+                <li><a href="#">Szemhéj</a></li>
+                <li><a href="#">Száj</a></li>
+            </ul>
+        </nav>
         <header class="siteheader swrap swrap--dark swrap--full swrap--narrow">
             <a href="#" class="siteheader__logo">
                 <img src="images/logo.svg" alt="Elysian" />
             </a>
             <nav class="siteheader__nav">
                 <ul class="menu menu--main">
-                    <li class="is-active"><a href="#">Studió</a></li>
+                    <li class="is-active"><a href="#">Stúdió</a></li>
                     <li><a href="#">Árak</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Kapcsolat</a></li>
                 </ul>
             </nav>
-            <div class="siteheader__section">
+            <!-- <div class="siteheader__section">
                 <a href="tel:+36702996999" class="btn">
                     <small>Időpontfoglalás</small>+36 70 299 6999
                 </a>
-                <!-- Esetleg másodlagos menü: Sminketoválás: Szemöldök | Szemhéj | Száj -->
-            </div>
+            </div> -->
         </header>
 
         <section class="hero swrap swrap--dark">
@@ -35,11 +43,11 @@
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
-                <img src="http://placehold.it/1600x1200/?text=vaó" alt="" />
+                <img src="https://source.unsplash.com/random/1200x900/?beauty,makeup" alt="" />
             </figure>
         </section>
 
-        <section id="service" class="service swrap swrap--light atext-center">
+        <section id="service" class="service swrap swrap--light">
             <h2 class="nicetitle">Sminktetoválás <em>Természetes szépség minden ébredéskor</em></h2>
             <p>
                 Imagine, you wake up in the morning and are perfectly made-up. In a way that
@@ -48,7 +56,7 @@
                 but also for eyeglass wearers or people who want to permanently hide a small flaw.
             </p>
         </section>
-        <section id="slister" class="swrap aswrap--full slister">
+        <section id="slister" class="slister">
             <div class="servicelist">
                 <div class="servicecard">
                     <h3 class="servicecard__title">Szemöldök <em>Csodálatos formáért</em></h3>
@@ -59,7 +67,7 @@
                         pigmentation. Additional shades increase the expressiveness. The result is a
                         perfectly shaped yet completely natural eyebrow.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
+                    <a href="#" class="servicecard__action fauxbtn">Részletek</a>
                 </div>
 
                 <div class="servicecard">
@@ -71,7 +79,7 @@
                         effectively. No more annoying blurring and daily makeup and make-up. The
                         permanent eyeliner is the most beautiful solution, not just for an eye-sight.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
+                    <a href="#" class="servicecard__action fauxbtn">Tudj meg többet</a>
                 </div>
 
                 <div class="servicecard">
@@ -86,14 +94,14 @@
                         every situation your mouth looks fresh and beautiful. The only pity that you
                         can not see it permanently yourself!
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Részletek...</a>
+                    <a href="#" class="servicecard__action fauxbtn">Szolgáltatás részletei</a>
                 </div>
             </div>
         </section>
 
         <section id="bio" class="bio swrap">
             <figure class="bio__foto">
-                <img src="http://placehold.it/500x500/?text=dia" alt="" />
+                <img src="https://source.unsplash.com/random/800x800/?headshot" alt="" />
                 <figcaption>
                     Jónás Diána
                     <em>Sminktetováló művész</em>
@@ -126,7 +134,7 @@
             </div>
         </section>
 
-        <section id="testimoinals" class="swrap swrap--light">
+        <section id="testimoinals" class="swrap swrap--dark">
             <ul class="testilist">
                 <li>
                     <blockquote class="testicard">
@@ -136,7 +144,11 @@
                             hangulatos kis helye van, ahol igazán le lehet ereszteni, amíg ott vagy.
                             Imádom
                         </p>
-                        <cite>Kling Szandra</cite>
+                        <cite>
+                            <img src="//source.unsplash.com/random/200x200/?portraiture" alt="" />
+                            Kling Szandra
+                            <span>Teljes generál 2 évente</span></cite
+                        >
                     </blockquote>
                 </li>
                 <li>
@@ -147,7 +159,11 @@
                             viseljük az esztétikus és ízléses munkája eredményét. Ez úton is
                             szeretném megköszönni neki és mindenkinek nyugodt szívvel ajánlani.
                         </p>
-                        <cite>Nagy Bianka</cite>
+                        <cite>
+                            <img src="//source.unsplash.com/random/200x200/?headshot" alt="" />
+                            Nagy Bianka
+                            <span>Visszatérő vendég</span></cite
+                        >
                     </blockquote>
                 </li>
                 <li>
@@ -161,21 +177,26 @@
                             a.dm fasdkfjh ashdf lasdhf lasdjfk ahsdkfh klashdfk haksdh kashdf kahsdfk
                             adkfh akhs
                         </p>
-                        <cite>Patik Marta</cite>
+                        <cite>
+                            <img src="//source.unsplash.com/random/202x202/?headshot" alt="" />
+                            Patik Marta
+                            <span>3 éve szájtetováltat</span></cite
+                        >
                     </blockquote>
                 </li>
             </ul>
         </section>
-        <section class="swrap">
-            <h2>Nem volt még sminktetoválásod?</h2>
-            <p>
-                Kérj személyes konzultációt és
-                <strong>ingyenes berajzolást.</strong>
-            </p>
-            <a href="#" class="btn">Kapcsolatfelvétel</a>
-            <a href="#" class="btn">Tudnivalók újaknak</a>
+        <section class="swrap promoblock">
+            <img src="images/diadolgozik.jpg" alt="" />
+            <div class="callout">
+                <h2>Nem volt még sminktetoválásod?</h2>
+                <p>
+                    Kérj személyes konzultációt és ingyenes berajzolást.
+                </p>
+                <a href="#" class="btn abtn--inverse">Tudnivalók újaknak</a>
+            </div>
         </section>
-        <footer class="sitefooter swrap swrap--full swrap--narrow swrap--light">
+        <footer class="sitefooter swrap swrap--full swrap--narrow swrap--dark">
             <div class="sitefooter__section">
                 <h3>Elysian Beauty Kft.</h3>
                 <ul>
