--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,9 @@
 
         <section class="hero swrap swrap--dark">
             <div class="hero__content">
-                <h1>Ébredj tökéletes sminkben minden reggel</h1>
+                <h1 class="hero__title">Ébredj tökéletes sminkben minden reggel</h1>
                 <p>
-                    Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás Budán.
+                    Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás.
                 </p>
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
@@ -48,18 +48,38 @@
         </section>
 
         <section id="service" class="service swrap swrap--light">
-            <h2 class="nicetitle">Sminktetoválás <em>Természetes szépség minden ébredéskor</em></h2>
-            <p>
-                Imagine, you wake up in the morning and are perfectly made-up. In a way that
-                accentuates your natural beauty to the fullest. Permanent make-up fulfills this
-                dream. It is not only the ideal solution for those who are in a hurry in the morning,
-                but also for eyeglass wearers or people who want to permanently hide a small flaw.
-            </p>
+            <div class="">
+                <h2 class="nicetitle">
+                    Sminktetováló stúdió Budán exclusive környezetben
+                    <em>Tökéletesség, boldogság és harmónia.</em>
+                </h2>
+                <div class="lead">
+                    <p>
+                        Imagine, you wake up in the morning and are perfectly made-up. In a way that
+                        accentuates your natural beauty to the fullest. Permanent make-up fulfills
+                        this dream. It is not only the ideal solution for those who are in a hurry in
+                        the morning, but also for eyeglass wearers or people who want to permanently
+                        hide a small flaw.
+                    </p>
+                    <p>
+                        Vendégeink arcvonásaival maximálisan harmonizáló sminktetoválásokat
+                        készítünk, a személyiség jegyek és az egyedi vonások megtartásával.
+                        Tökéletességre törekszünk, hogy minden kedves hölgyvendégünk boldogan és
+                        elégedetten viselje munkánk gyümölcsét.
+                    </p>
+
+                    <p>
+                        <a href="#" class="fauxbtn">nézz körül (fotók a stúdióról)</a>
+                    </p>
+                </div>
+            </div>
         </section>
         <section id="slister" class="slister">
             <div class="servicelist">
                 <div class="servicecard">
-                    <h3 class="servicecard__title">Szemöldök <em>Csodálatos formáért</em></h3>
+                    <h3 class="servicecard__title">
+                        Szemöldök tetoválás<em>Csodálatos formáért</em>
+                    </h3>
                     <p>
                         The eyebrows make the whole face. Even the smallest corrections make it seem
                         livelier and clearer. With permanent make-up, your eyebrows are always in the
@@ -71,7 +91,9 @@
                 </div>
 
                 <div class="servicecard">
-                    <h3 class="servicecard__title">Szemhéj <em>Elbűvölő tekintetért</em></h3>
+                    <h3 class="servicecard__title">
+                        Szemhéj tetoválás<em>Elbűvölő tekintetért</em>
+                    </h3>
                     <p>
                         The eyelid line emphasizes the expressiveness of the eyes. Either with a fine
                         line that can discreetly hide a lash loss and give the eyes that certain
@@ -83,7 +105,7 @@
                 </div>
 
                 <div class="servicecard">
-                    <h3 class="servicecard__title">Száj <em>Álom ajkakért</em></h3>
+                    <h3 class="servicecard__title">Száj tetoválás <em>Álom ajkakért</em></h3>
                     <p>
                         Colorful, beautifully contoured lips, every day, all day long. And all
                         without lipstick and make-up mirror. Even the preliminary drawing, which
@@ -108,29 +130,21 @@
                 </figcaption>
             </figure>
             <div class="bio__content">
-                <h2 class="nicetitle">
-                    Bemutatkozás
-                </h2>
-                <p>
-                    Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként
-                    életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a sminktetoválás
-                    világa. Nem volt kérdés, hogy a továbbiakban ezzel fog foglalkozni.
-                </p>
-                <p>
-                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
-                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint 4 év
-                    gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.
-                </p>
-                <p>
-                    Tökéletesség, boldogság és harmónia. Ezek az Elysian alapelvei. Vendégek
-                    arcvonásaival maximálisan harmonizáló sminktetoválással a tökéletességre
-                    törekszik, a személyiségek és egyedi vonások megtartásával, hogy a vendég
-                    boldogan távozhasson.
-                </p>
-                <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
-                <p>
-                    <a href="#" class="fauxbtn">nézd körül a stúdióban</a>
-                </p>
+                <h2 class="nicetitle">Bemutatkozás <em>Ismerd meg a stúdióvezetőt</em></h2>
+                <div class="lead">
+                    <p>
+                        Dia, pályályafutását szerencsés módon Hamburgban kezdte, ahol kozmetiskusként
+                        életreszóló tapasztalatokat szerzett. Hazatérve magával ragadata a
+                        sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban ezzel fog
+                        foglalkozni.
+                    </p>
+                    <p>
+                        A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
+                        tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Több mint
+                        4 év gyakorlat után jött el az idő, hogy Dia saját szalont nyittott.
+                    </p>
+                    <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
+                </div>
             </div>
         </section>
 
