--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader swrap swrap--dark swrap--full swrap--narrow">
+        <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
             <a href="#" class="siteheader__logo">
                 <img src="images/logo.svg" alt="Elysian" />
             </a>
@@ -34,7 +34,7 @@
             </div> -->
         </header>
 
-        <section class="hero swrap swrap--dark">
+        <section class="hero">
             <div class="hero__content">
                 <h1 class="hero__title">Ébredj tökéletes sminkben minden reggel</h1>
                 <p>
@@ -43,7 +43,7 @@
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x900/?beauty,makeup" alt="" />
+                <img src="https://source.unsplash.com/random/1200x800/?beauty,makeup" alt="" />
             </figure>
         </section>
 
@@ -55,11 +55,11 @@
                 </h2>
                 <div class="lead">
                     <p>
-                        Imagine, you wake up in the morning and are perfectly made-up. In a way that
-                        accentuates your natural beauty to the fullest. Permanent make-up fulfills
-                        this dream. It is not only the ideal solution for those who are in a hurry in
-                        the morning, but also for eyeglass wearers or people who want to permanently
-                        hide a small flaw.
+                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Oly módon, hogy a
+                        természetes szépséged emeli ki. A sminktetoválás megfelel ennek az álomnak.
+                        Ez nem csak azoknak ideális megoldás, akik reggel sietnek, hanem a szemüveget
+                        viselőknek vagy azoknak is, akik tartósan szeretnének elrejteni egy
+                        szépséghibát.
                     </p>
                     <p>
                         Vendégeink arcvonásaival maximálisan harmonizáló sminktetoválásokat
@@ -81,11 +81,11 @@
                         Szemöldök tetoválás<em>Csodálatos formáért</em>
                     </h3>
                     <p>
-                        The eyebrows make the whole face. Even the smallest corrections make it seem
-                        livelier and clearer. With permanent make-up, your eyebrows are always in the
-                        right shape. Irregular or missing hair growth can be compensated by fine
-                        pigmentation. Additional shades increase the expressiveness. The result is a
-                        perfectly shaped yet completely natural eyebrow.
+                        A szemöldök emeli ki az egész arcot. A legkisebb korrekciók is nagy
+                        változásnak tűnhet. Sminktetoválással a szemöldök mindig megfelelő formáját
+                        mutatja. A szabálytalan vagy hiányzó szőrnövekedés finom pigmentációval
+                        kompenzálható. További árnyalatok növelik az expresszivitást. Az eredmény egy
+                        tökéletes ívű, de természetes hatású szemöldök.
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Részletek</a>
                 </div>
@@ -95,11 +95,11 @@
                         Szemhéj tetoválás<em>Elbűvölő tekintetért</em>
                     </h3>
                     <p>
-                        The eyelid line emphasizes the expressiveness of the eyes. Either with a fine
-                        line that can discreetly hide a lash loss and give the eyes that certain
-                        something. Or with a decorative line that underlines the shape of the eyes
-                        effectively. No more annoying blurring and daily makeup and make-up. The
-                        permanent eyeliner is the most beautiful solution, not just for an eye-sight.
+                        Egy finom vonal a felső szemhéjon, mely diszkréten elrejti a szempillák
+                        hiányát, és kereted ad a szemnek. Emellett egy kontúrvonal az alsó szemhéjon
+                        is, a szemek alakját hangsúlyozza. Nincs több bosszantó elmosódó smink. Az
+                        kontúr tetoválása vagy pillatő sűrítése a legszebb a szem hangsúlyossá
+                        tételehéz.
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Tudj meg többet</a>
                 </div>
@@ -107,14 +107,11 @@
                 <div class="servicecard">
                     <h3 class="servicecard__title">Száj tetoválás <em>Álom ajkakért</em></h3>
                     <p>
-                        Colorful, beautifully contoured lips, every day, all day long. And all
-                        without lipstick and make-up mirror. Even the preliminary drawing, which
-                        compensates for small irregularities and emphasizes beautiful curves, will
-                        convince you. Pigmenting is done with a lip color tailored to your wishes.
-                        From the natural lip tone to the exciting trend color. No make-up and
-                        smearing more. Whether after a meal, sports or a passionate encounter - in
-                        every situation your mouth looks fresh and beautiful. The only pity that you
-                        can not see it permanently yourself!
+                        Színes, élettel teli ajkak egész nap, minden nap. A rúzsok és sminktükör már
+                        a múlté. Az egyenletlen vonalakat szabályos ívekké varázsoljuk. Választhatsz
+                        természetes színt, vagy egy divatos erősebb árnyalatot, az ajaktetoválás
+                        mindenkinek jól áll. Nincs több elmosódott kontúr, ezután ehetsz és ihatsz
+                        bátran, vagy sportolhatsz és még csókálló is!
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Szolgáltatás részletei</a>
                 </div>
